--- a/public/index.html
+++ b/public/index.html
@@ -23,17 +23,20 @@
     <title>Frontend Mentor | Todo app</title>
 
     <style>
-      .attribution { font-size: 11px; text-align: center; }
+      .attribution {margin-top: 10px; font-size: 11px; text-align: center; }
       .attribution a { color: hsl(228, 45%, 44%); }
+
+      .dark .attribution{
+        color: hsl(236, 33%, 92%);
+      }
+      .light .attribution{
+        color: hsl(228, 11%, 9%);
+      }
     </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.instagram.com/mohitkalme21/?hl=en" target="_blank">Mohit kalme</a>.
-    </div>
+
   </body>
 </html>
